CHEMH-161: fixed logged in button and tidied up spacing

--- a/src/scss/theme/_admin.scss
+++ b/src/scss/theme/_admin.scss
@@ -72,3 +72,11 @@ nav {
     border-radius: 13px;
   }
 }
+
+.simplesamlphp-auth-login-link {
+  &.su-button {
+    @include chemh-button--plain;
+
+    background-color: $su-color-white;
+  }
+}
